# clDNN

./: .gitignore  .gitmodules  CMakeCompilerLinkerOpts.txt  CMakeLists.txt  README.md  create_msvc_mscc.bat  create_msvc_mscc_ie.bat  create_msvc_mscc_ie_vs17.bat  create_msvc_mscc_ks.bat  create_unixmake_gcc.sh  create_unixmake_gcc_ie.sh  create_unixmake_gcc_ks.sh  main.cpp  neural.sln  neural.vcxproj  neural.vcxproj.filters  o_b.txt  pooling.cpp  version.json
cost_model/: 0_cost_gt2_direct.txt  0_cost_gt2_direct_linux.txt  0_cost_gt2_gemm.txt  0_cost_gt2_gemm_linux.txt  0_cost_gt2_igk.txt  0_cost_gt2_igk_linux.txt  0_cost_gt4e_direct_linux.txt  1_direct_flag.txt  1_direct_flag_linux.txt  1_direct_flag_unroll_1.txt  1_direct_flag_unroll_2.txt  1_direct_flag_unroll_3.txt  1_direct_no_flag.txt  1_direct_no_flag_linux.txt  1_direct_no_flag_unroll_1.txt  1_direct_no_flag_unroll_2.txt  1_direct_no_flag_unroll_3.txt  1_gemm_flag.txt  1_gemm_flag_linux.txt  1_gemm_no_flag.txt  1_gemm_no_flag_linux.txt  1_igk_flag.txt  1_igk_flag_linux.txt  1_igk_no_flag.txt  1_igk_no_flag_linux.txt  CMakeLists.txt  analyse_res.py  convolution_kernels.txt  convolution_kernels_old.txt  main.cpp  remove_duplication.py  res_13_6_2017.txt  res_13_6_2017_direct.txt  res_13_6_2017_gemm.txt  res_13_6_2017_igk.txt  to_cpp.py
examples/: 000.cpp  001.cpp  002.cpp  003.cpp  004.cpp  005.cpp  006.cpp  007.cpp  008.cpp  009.cpp  Alexnet.cpp  Alexnet.cpp.orig  Alexnet_new_api.cpp  CMakeLists.txt  Squeezenet.cpp  Squeezenet_int8.cpp  Wingorad_test.cpp  bn.cpp  bn_examples.cpp  converter.cpp  convolution_exec_resource_samples.cpp  convolution_samples.cpp  file.cpp  file.h  fully_connected_samples.cpp  gender.cpp  googleNet_v1.cpp  lenet.cpp  lrn_samples.cpp  lstm_character_level_model.cpp  main.cpp  main.cpp.orig  microbench.cpp  microbench_conv.cpp  microbench_lstm.cpp  neural_memory.h  os_linux.h  os_windows.cpp  os_windows.h  output_parser.cpp  (+13 more)
examples/archive_to_be_deleted/: bn.cpp  softmax_samples.cpp
examples/common/: CMakeLists.txt  FreeImage_wraps.cpp  FreeImage_wraps.h  command_line_utils.h  common_tools.cpp  common_tools.h  converter.cpp  executable_utils.cpp  executable_utils.h  file.cpp  file.h  file_system_utils.cpp  file_system_utils.h  image_toolkit.cpp  image_toolkit.h  instrumentation.cpp  instrumentation.h  lmdb_utils.cpp  lmdb_utils.hpp  lstm_utils.cpp  lstm_utils.h  neural_memory.h  os_windows.cpp  os_windows.h  output_parser.cpp  output_parser.h  power_instrumentation.cpp  power_intrumentation.h  power_intstrumentation.cpp
examples/examples/: Alexnet.cpp  CMakeLists.txt  Squeezenet.cpp  Squeezenet_int8.cpp  gender.cpp  googleNet_v1.cpp  lstm_character_level_model.cpp  main.cpp  resnet50-i8.cpp  resnet50.cpp  ssd_mobilenet-i8.cpp  ssd_mobilenet.cpp  topologies.h  vgg16.cpp
examples/examples_rnn/: CMakeLists.txt  charr_rnn_utils.cpp  helpers.cpp  helpers.h  lstm_character_level_model.cpp  lstm_utils.h  main.cpp  nmt_utils.cpp  onmt_ger_to_eng_6_layers.cpp  topologies.h
examples/examples_training/: CMakeLists.txt  lenet.cpp  main.cpp  resnet50.cpp  topologies.h  vgg16.cpp
examples/examples_transform/: CMakeLists.txt  fns_instance_norm.cpp  main.cpp  report.html  test_transpose.cpp  topologies.h  transform_output_printer.cpp  transform_output_printer.h
examples/microbench/: CMakeLists.txt  main.cpp  microbench_conv.cpp  microbench_lstm.cpp  topologies.h
examples/utils/: fns_onnx_to_nnd.py  nnd_converter.py  onnx_to_txt.py  resnet-50-nss.json  sample_alexnet.json  ssd_mobilenet.json
inference_engine/: CMakeLists.txt  Creating IE binaries for validation - clDNN - Intel Enterprise Wiki.url  conform.json  copy_ie_binaries.bat  copy_ie_binaries.sh  ie_imports.cmake  ie_outputs.cmake  run_nets.py
inference_engine/generic_sample/: CMakeLists.txt  cpuid.cpp  main.cpp  msr.cpp  rapl.cpp
kernel_selector/: CMakeLists.txt
kernel_selector/common/: common_tools.h  common_types.h  tensor_type.cpp  tensor_type.h
kernel_selector/core/: auto_tuner.cpp  auto_tuner.h  auto_tuner_offline.cpp  auto_tuner_offline.h  cache_SKL_GT2.cpp  cache_SKL_GT2_0.cpp  cache_SKL_GT2_1.cpp  cache_SKL_GT2_2.cpp  cache_SKL_GT4e.cpp  cache_SKL_GT4e_0.cpp  cache_SKL_GT4e_1.cpp  cache_SKL_GT4e_2.cpp  kernel_base.cpp  kernel_base.h  kernel_runner_interface.h  kernel_selector.cpp  kernel_selector.h  kernel_selector_common.cpp  kernel_selector_common.h  kernel_selector_params.cpp  kernel_selector_params.h
kernel_selector/vx_adapter/: vxa_activation_kernel.cpp  vxa_activation_kernel.h  vxa_api_impl.cpp  vxa_common.cpp  vxa_common.h  vxa_convert_kernel.cpp  vxa_convert_kernel.h  vxa_convolution_kernel.cpp  vxa_convolution_kernel.h  vxa_eltwise_kernel.cpp  vxa_eltwise_kernel.h  vxa_fully_connected_kernel.cpp  vxa_fully_connected_kernel.h  vxa_kernel_base.cpp  vxa_kernel_base.h  vxa_locally_connected_kernel.cpp  vxa_locally_connected_kernel.h  vxa_lrn_kernel.cpp  vxa_lrn_kernel.h  vxa_normalization_kernel.cpp  vxa_normalization_kernel.h  vxa_pooling_kernel.cpp  vxa_pooling_kernel.h  vxa_reorder_kernel.cpp  vxa_reorder_kernel.h  vxa_roi_pooling_kernel.cpp  vxa_roi_pooling_kernel.h  vxa_softmax_kernel.cpp  vxa_softmax_kernel.h  (+2 more)
src/: CMakeLists.txt  CMakeLists.txt.orig  activation.cpp  activation_grad.cpp  add_required_reorders.cpp  apply_adam.cpp  arg_max.cpp  arg_max_min.cpp  assign_patch.cpp  average_unpooling.cpp  batch_norm.cpp  batch_normalization.cpp  border.cpp  calc_idx_template_specialization.cpp  cldnn.cpp  concatenation.cpp  condition.cpp  constants_propagator.cpp  convolution.cpp  convolution.h  convolution_common.cpp  convolution_common.h  convolution_cpu_jit.cpp  convolution_cpu_jit.h  convolution_cpu_jit_batch1.cpp  convolution_cpu_jit_batch1.h  convolution_cpu_jit_generic.cpp  convolution_cpu_jit_generic.h  convolution_cpu_reference.cpp  convolution_cpu_reference.h  convolution_grad_weights.cpp  convolution_jit.cpp  convolution_relu.cpp  convolution_relu.h  crop.cpp  custom_gpu_primitive.cpp  data.cpp  deconvolution.cpp  depth_concatenate.cpp  depth_concatenation.cpp  (+125 more)
tests/: CMakeLists.txt  main.cpp
(+1444 files in other folders)
